# Clinica-Gest-o

./: .env.example  .gitignore  .ignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 202605260001_create_clinic_settings.py  202605260002_create_users.py  202605260003_create_roles_permissions.py  202605260004_create_leads.py  202605260005_create_financial_transactions.py  202605260006_create_inventory.py  202605260007_create_performance.py  202605260008_create_mcp_audit_logs.py  202605260009_create_mcp_connector_settings.py  202605260010_create_mcp_oauth_tables.py
backend/app/core/: __init__.py  application.py  config.py  router.py  security.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/modules/clinic/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/crm/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/dashboard/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/finance/: __init__.py  models.py  repository.py  router.py  (+2 more)
backend/app/scripts/: __init__.py  seed_admin.py
backend/tests/: __init__.py  test_clinic.py  test_crm.py  test_dashboard.py  test_finance.py  test_health.py  test_integrations.py  test_inventory.py  test_mcp.py  test_performance.py  test_security.py  test_users.py
(+75 files in other folders)
