[project]
name = "clinica-gestao-backend"
version = "0.1.0"
description = "API administrativa para gestao interna da clinica."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "pyjwt>=2.10,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
